use case 2 if payment for book then generate packing slip & duplicate packing slip for royalty department